# person_tracking

./: .gitignore  CMakeLists.txt  package.xml
apps/: hdl_people_detection_node.cpp  person_det_node.cc  person_detection_node.cpp  person_tracking_node.cpp
include/hdl_people_tracking/: kalman_tracker.hpp  people_tracker.hpp
launch/: hdl_people_tracking.launch  hdl_people_tracking_static.launch  person_tracking_static.launch  person_tracking_static_merge.launch
src/: kidono_human_classifier.cpp  people_detector.cpp
